--- a/HorseFacts.Web.Tests/HorseFacts.Web.Tests.csproj
+++ b/HorseFacts.Web.Tests/HorseFacts.Web.Tests.csproj
@@ -4,13 +4,20 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Castle.Core" Version="4.4.0" />
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
-    <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HorseFacts.Core\HorseFacts.Core.csproj" />
+    <ProjectReference Include="..\HorseFacts.Web\HorseFacts.Web.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Moq, Version=4.10.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920">
+      <HintPath>..\..\..\.nuget\packages\moq\4.10.1\lib\netstandard1.3\Moq.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
