--- a/HorseFacts.Boundary/HorseFacts.Boundary.csproj
+++ b/HorseFacts.Boundary/HorseFacts.Boundary.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 </Project>
