--- a/HorseFacts.Web.Tests/HorseFacts.Web.Tests.csproj
+++ b/HorseFacts.Web.Tests/HorseFacts.Web.Tests.csproj
@@ -1,23 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Castle.Core" Version="4.4.0" />
-    <PackageReference Include="FluentAssertions" Version="5.6.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="nunit" Version="3.11.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Moq" Version="4.15.2" />
+    <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HorseFacts.Core\HorseFacts.Core.csproj" />
     <ProjectReference Include="..\HorseFacts.Web\HorseFacts.Web.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Moq, Version=4.10.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920">
-      <HintPath>..\..\..\.nuget\packages\moq\4.10.1\lib\netstandard1.3\Moq.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
