--- a/HorseFacts.Web/appsettings.json
+++ b/HorseFacts.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CatFacts": {
+    "Hostname": "https://cat-fact.herokuapp.com"
+  }
 }
