--- a/HorseFacts.CatFactsApiPlugin.Tests/HorseFacts.CatFactsApiPlugin.Tests.csproj
+++ b/HorseFacts.CatFactsApiPlugin.Tests/HorseFacts.CatFactsApiPlugin.Tests.csproj
@@ -5,10 +5,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
-    <PackageReference Include="WireMock.Net" Version="1.0.8" />
+    <PackageReference Include="WireMock.Net" Version="1.0.7" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HorseFacts.CatFactsApiPlugin\HorseFacts.CatFactsApiPlugin.csproj" />
