--- a/HorseFacts.CatFactsApiPlugin.Tests/HorseFacts.CatFactsApiPlugin.Tests.csproj
+++ b/HorseFacts.CatFactsApiPlugin.Tests/HorseFacts.CatFactsApiPlugin.Tests.csproj
@@ -6,10 +6,13 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.1" />
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="WireMock.Net" Version="1.0.7" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HorseFacts.CatFactsApiPlugin\HorseFacts.CatFactsApiPlugin.csproj" />
