--- a/HorseFacts.Web.E2ETests/HorseFacts.Web.E2ETests.csproj
+++ b/HorseFacts.Web.E2ETests/HorseFacts.Web.E2ETests.csproj
@@ -9,10 +9,13 @@
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="16.8.3" />
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="WireMock.Net" Version="1.0.7" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HorseFacts.Web\HorseFacts.Web.csproj" />
