--- a/HorseFacts.Web/HorseFacts.Web.csproj
+++ b/HorseFacts.Web/HorseFacts.Web.csproj
@@ -4,6 +4,10 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.OpenApi" Version="1.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\HorseFacts.CatFactsApiPlugin\HorseFacts.CatFactsApiPlugin.csproj" />
     <ProjectReference Include="..\HorseFacts.Core\HorseFacts.Core.csproj" />
   </ItemGroup>
