--- a/HorseFacts.Web/appsettings.json
+++ b/HorseFacts.Web/appsettings.json
@@ -7,5 +7,8 @@
   "AllowedHosts": "*",
   "CatFacts": {
     "Hostname": "https://cat-fact.herokuapp.com"
+  },
+  "BaconIpsum": {
+    "Hostname": "https://baconipsum.com"
   }
 }
