Move word lists to gateway

--- a/HorseFacts.Core.Tests/HorseFacts.Core.Tests.csproj
+++ b/HorseFacts.Core.Tests/HorseFacts.Core.Tests.csproj
@@ -15,5 +15,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HorseFacts.Core\HorseFacts.Core.csproj" />
+    <ProjectReference Include="..\HorseFacts.WordProviders\HorseFacts.WordProviders.csproj" />
   </ItemGroup>
 </Project>
